--- a/write a blog post.ipynb
+++ b/write a blog post.ipynb
@@ -3110,7 +3110,7 @@
     "2. **Java** have been well-deserved to be learned.\n",
     "3. People who already work with a certain programming language have a tendency to learn that language or related languages within correlated areas to improve their own skill.\n",
     "\n",
-    "To see more about this analysis, see the link to my medium post available [here](https://medium.comf)."
+    "To see more about this analysis, see the link to my medium post available [here](https://medium.com/@dipanjanoffcial369/which-is-the-best-programming-language-to-learn-in-india-819cf31da547)."
    ]
   },
   {
